# skunk

./: .gitignore  README.md  reader.py
client/: Cargo.toml  index_template.html
client/src/: main.rs
client/static/: index.html
skunk-back/: Cargo.toml
skunk-back/src/: main.rs
