[package]
name = "skunk-back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
axum_static = "1.2.3"
http-body-util = "0.1"
log = "0.4"
pretty_env_logger = "0.3"
tokio = { version = "1", features = ["full"] }
zip = "0.5" 
